# lets-rust-further

./: Cargo.toml
src/: main.rs  router.rs  validator.rs
src/handlers/: errors.rs  healthcheck.rs  mod.rs  movies.rs
src/models/: mod.rs  movie.rs
