[package]
name = "greenscreen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "~0.5"
chrono = { version = "~0.4", features = ["serde"] }
clap = { version = "~3.2", features = ["derive"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
tokio = { version = "~1.20", features = ["full"] }
tracing = "~0.1"
tracing-subscriber = "~0.3"
